--- a/style.css
+++ b/style.css
@@ -267,7 +267,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .services-list div:hover{
-    box-shadow:-6px -6px 12px #37feff;
+    /* box-shadow:-6px -6px 12px #37feff; */
     color: black;
     background: linear-gradient(168deg, rgba(0,255,171,1) 0%, rgba(0,255,255,1) 50%, rgba(0,0,255,1) 100%);
     transform: translateY(-15px);
