--- a/style.css
+++ b/style.css
@@ -66,6 +66,10 @@ animation: bounce-3 2.1s ease-in-out 0.6s infinite;
 }
 
 
+.container{
+    padding: 5px 10%;
+    padding-top: 120px;
+}
 #header{
     width: 100%;
     height: 100vh;
@@ -76,7 +80,7 @@ animation: bounce-3 2.1s ease-in-out 0.6s infinite;
 }
 .me{
     border-radius: 100%;
-    margin-top: 18%;
+    margin-top: 8%;
     width: 235px;
     /* background: linear-gradient(168deg, rgba(0,255,171,1) 0%, rgba(0,255,255,1) 50%, rgba(0,0,255,1) 100%); */
     margin-bottom: 10px;
@@ -87,9 +91,6 @@ animation: bounce-3 2.1s ease-in-out 0.6s infinite;
     height: 225px;    
     border-radius: 100%;
 } 
-.container{
-    padding: 5px 10%;
-}
 nav{
     z-index: 1;
     width: 100%;
@@ -101,6 +102,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    
 }
 .logo{
     width: 250px;
@@ -280,6 +282,9 @@ nav ul li a:hover::after{
 #portfolio{
     padding: 50px 0;
 }
+#achievements{
+    padding: 50px 0;
+}
 .work-list{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
@@ -358,6 +363,9 @@ nav ul li a:hover::after{
 .btn:hover{
     background: linear-gradient(168deg, rgba(0,255,171,1) 0%, rgba(0,255,255,1) 50%, rgba(0,0,255,1) 100%);
     color: black;
+}
+#NetflixBG{
+    background-image: url(image/NetflixBG.png);
 }
 /*----------------------------Contact----------------------*/
 .contact-left{
